# ROOT_data_processing

./: .gitignore  CMakeLists.txt  CleanCompile.sh  GenEclipseProject.sh  Readme.txt  Recompile.sh  Run.sh  TODO.txt  eclipse_readme.txt
QtData_processing/: QtData_processing.pro
include/: AllEventsResults.h  AllRunsResults.h  AnalysisManager.h  ExperimentArea.h  GlobalDefinitions.h  GlobalParameters.h  GraphCollection.h  GraphicOutputManager.h  MTAnalysisManager.h  PeakInfo.h  Polynom2Order.h  PolynomialFit.h  Savitzky_Golay_filter.h  SignalOperations.h  SingleEventData.h  SingleRunData.h  SingleRunResults.h
scripts/: pull_221124_data.py  pull_231109_1ph_data.py  smb_disk.py
source/: AllEventsResults.cpp  AllRunsResults.cpp  AnalysisManager.cpp  ExperimentArea.cpp  GlobalDefinitions.cpp  GlobalParameters.cpp  GraphCollection.cpp  GraphicOutputManger.cpp  MTAnalysisManager.cpp  Manifest170622Cd.cpp  Manifest180705.cpp  Manifest180830Xray.cpp  Manifest190307Xray.cpp  Manifest190404.cpp  Manifest191107.cpp  Manifest191128.cpp  Manifest200116.cpp  Manifest200213.cpp  Manifest200910Pu.cpp  Manifest201015.cpp  Manifest201015S1.cpp  Manifest201015Xray.cpp  Manifest201217.cpp  Manifest210121.cpp  Manifest210128.cpp  Manifest210218.cpp  Manifest210302.cpp  Manifest210311.cpp  Manifest210316.cpp  Manifest210429.cpp  Manifest210513.cpp  Manifest210603.cpp  Manifest210902.cpp  Manifest210909.cpp  Manifest210923.cpp  Manifest210930.cpp  Manifest211007.cpp  Manifest211014.cpp  Manifest211021.cpp  Manifest211028.cpp  (+22 more)
